# tum-adlr-ss20-05

./: .gitignore  .pre-commit-config.yaml  Makefile  milestones.md  pyproject.toml  readme.md
doc/: environment.md
src/elevator_rl/: animate.sh  config.yaml  config_default.yaml  elevator.py  elevator_env.py  elevator_env_render.py  evaluation_logging_process.py  evlauate_model.py  example_houses.py  house.py  hyperparam_search.py  interactive_env.py  model_test.py  observation.py  passenger.py  passenger_generator.py  train.py  train_multiple.py  train_uniform_model.py  yparams.py
src/elevator_rl/alphazero/: mcts.py  model.py  ranked_reward.py  replay_buffer.py  sample_generator.py  tensorboard.py
src/elevator_rl/baseline/: baseline_data_analysis.py  collect_data.py  collective_control.py  random_policy.py  uniform_model.py
src/elevator_rl/environment/: elevator.py  elevator_env.py  elevator_env_render.py  episode_summary.py  example_houses.py  house.py  interactive_env.py  observation.py  passenger.py  passenger_generator.py
