[tool.poetry]
name = "elevator_rl"
version = "0.1.0"
description = "RL for the task of elevator passenger transportation"
authors = ["Tim Pfeifle <pfeifletim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.2.1"


[tool.poetry.dev-dependencies]
pytest = "^3.8"
pytest-cov = "^2.8.1"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
